--- a/boot/SOFTWARE.bib
+++ b/boot/SOFTWARE.bib
@@ -6,7 +6,14 @@
 %   source  = {jonathan-rault/CREDO.utils@0e1aff7},
 % }
 
-
 @Manual{TEST.PACKAGE,
   source  = {Jonathan-rault/r-package-test-taf@6bf12c1},
+}
+
+@Manual{captioner,
+  author  = {Alathea Letaw},
+  year    = {2015},
+  title   = {captioner: Numbers Figures and Creates Simple Captions},
+  version = {2.2.3.9000},
+  source  = {adletaw/captioner@807ddb2},
 }
