--- a/boot/DATA.bib
+++ b/boot/DATA.bib
@@ -24,6 +24,12 @@
   source     = {folder},
 }
 
+@Misc{template,
+  originator = {ifremer},
+  title      = {template for rmd pdf},
+  source     = {folder},
+}
+
 @Misc{boot-script,
   year       = {2025},
   source     = {script},
