--- a/report_pdf.Rmd
+++ b/report_pdf.Rmd
@@ -142,4 +142,4 @@ CREDO.utils::latex_table_print(to_print, "individual measurements last year (lan
 
 ```
 
-## size structure
+## size structure : landings
