--- a/boot/SOFTWARE.bib
+++ b/boot/SOFTWARE.bib
@@ -7,6 +7,7 @@
 % }
 
 @Manual{TEST.PACKAGE,
+  title   = {a sample package on my own github to test how to use it},
   source  = {Jonathan-rault/r-package-test-taf@6bf12c1},
 }
 
